updated screen promotions management